# tcp_chat

./: Cargo.toml
src/: client.rs  codec.rs  main.rs  server.rs  session.rs  sessions.rs
static/: websocket.html
